--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "create-next-example-app",
   "homepage": "https://xaiki.github.io/poroteo-senado",
   "dependencies": {
+    "ipfs": "^0.31.2",
     "localforage": "^1.7.2",
+    "orbit-db": "^0.19.9",
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-router-dom": "^4.3.1",
